--- a/style.css
+++ b/style.css
@@ -228,10 +228,10 @@ span {
 .js-bar {
   width: 70%;
 }
-.Python-bar {
+.python-bar {
   width: 80%;
 }
-.SQL-bar {
+.sql-bar {
   width: 82%;
 }
 .Tech-Skills-content {
